--- a/src/Component/GlobalStyles/GlobalStyles.scss
+++ b/src/Component/GlobalStyles/GlobalStyles.scss
@@ -3,6 +3,16 @@
 
 :root{
     --primary-color :#fe2c55;
+
+    //default layout
+    --default-header-height : 60px;
+    --default-header-width: 1150px;
+}
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html{
